# DC-Modpack-Data-Migration

./: .gitignore  README.md  build_exe.bat  data_migration_rules.conf  main.py  pyproject.toml
spec/: dc_data_migration.spec
src/: constants.py  data_migration.py  ui.py  ui_components.py  utils.py
tests/: test_data_migration.py  test_utils.py
